# corrformer-basicts-dwd

./: LICENSE  README.md  dwd_dataset.py  dwd_download.py  prediction_Corrformer.py  pyproject.toml
Corrformer/: Correlation.py  __init__.py
Corrformer/arch/: __init__.py  corrformer_arch.py  corrformer_layers.py
Corrformer/config/: corrformer_config.py
