[project]
name = "weather-prediction"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "basicts>=1.1.0",
    "tensorboard>=2.18.0",
    "wetterdienst>=0.117.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
